[gd_scene load_steps=11 format=3 uid="uid://byhx4nqhp22jo"]

[ext_resource type="Script" uid="uid://c4e02x7hylkmt" path="res://Model/main_menu.gd" id="1_8ln24"]
[ext_resource type="Texture2D" uid="uid://cl6ubdvrne04k" path="res://assets/menu_pictures/placeholder.jpg" id="2_rtw2f"]
[ext_resource type="Texture2D" uid="uid://de6nk4m5jdrro" path="res://assets/menu_pictures/logo.png" id="3_oa1go"]
[ext_resource type="Texture2D" uid="uid://o733whwy2vr8" path="res://assets/button/main_button/button.png" id="4_dq6vp"]
[ext_resource type="Script" uid="uid://djv63s70hb3cg" path="res://Model/masked_button.gd" id="5_3021e"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="5_jk1qb"]
[ext_resource type="Texture2D" uid="uid://dnfig8oii5wci" path="res://assets/button/main_button/button_hover.png" id="5_wntf2"]
[ext_resource type="Texture2D" uid="uid://3lhq2yd4r5q4" path="res://assets/button/main_button/button_click.png" id="7_dq6vp"]
[ext_resource type="AudioStream" uid="uid://k2l4hck1y7oc" path="res://assets/sounds/musics/main_theme_music.mp3" id="8_3021e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06t4h"]
bg_color = Color(0.294118, 0.635294, 0.721569, 0.603922)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="main_menu" type="CanvasLayer"]
script = ExtResource("1_8ln24")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rtw2f")

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.531
anchor_right = 0.55
anchor_bottom = 0.531
offset_left = -390.0
offset_top = -329.48004
offset_right = 390.0
offset_bottom = 328.51996
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")
metadata/_edit_use_anchors_ = true

[node name="btnJouer" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.26144072
anchor_right = 0.5
anchor_bottom = 0.26144072
offset_left = -181.0
offset_top = -95.528
offset_right = 181.0
offset_bottom = 95.472
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_dq6vp")
texture_pressed = ExtResource("7_dq6vp")
texture_hover = ExtResource("5_wntf2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_3021e")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel/btnJouer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.60723567
anchor_right = 0.5
anchor_bottom = 0.60723567
offset_left = -74.0
offset_top = -33.48201
offset_right = 74.0
offset_bottom = 33.51799
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 38
text = "JOUER"
metadata/_edit_use_anchors_ = true

[node name="btnOptions" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5440792
anchor_right = 0.5
anchor_bottom = 0.5440792
offset_left = -181.0
offset_top = -95.50403
offset_right = 181.0
offset_bottom = 95.49597
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_dq6vp")
texture_pressed = ExtResource("7_dq6vp")
texture_hover = ExtResource("5_wntf2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_3021e")

[node name="Label" type="Label" parent="Panel/btnOptions"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 38
text = "OPTIONS"
metadata/_edit_use_anchors_ = true

[node name="btnTuto" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5440792
anchor_right = 0.5
anchor_bottom = 0.5440792
offset_left = 576.0
offset_top = -583.0041
offset_right = 938.0
offset_bottom = -392.0041
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_dq6vp")
texture_pressed = ExtResource("7_dq6vp")
texture_hover = ExtResource("5_wntf2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_3021e")

[node name="Label" type="Label" parent="Panel/btnTuto"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 38
text = "TUTO"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="btnQuitter" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.81500006
anchor_right = 0.5
anchor_bottom = 0.81500006
offset_left = -180.7312
offset_top = -87.27002
offset_right = 181.2688
offset_bottom = 103.72998
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_dq6vp")
texture_pressed = ExtResource("7_dq6vp")
texture_hover = ExtResource("5_wntf2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_3021e")

[node name="Label" type="Label" parent="Panel/btnQuitter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61776435
anchor_right = 0.5
anchor_bottom = 0.6177644
offset_left = -95.0
offset_top = -33.492996
offset_right = 95.0
offset_bottom = 33.506996
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 38
text = "QUITTER"
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.024
anchor_right = 0.5
anchor_bottom = -0.024
offset_left = -375.0
offset_top = -77.208
offset_right = -251.33331
offset_bottom = -51.374664
scale = Vector2(6, 6)
texture = ExtResource("3_oa1go")

[node name="btnCredits" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.9140001
anchor_top = 0.92700005
anchor_right = 0.9140001
anchor_bottom = 0.92700005
offset_left = -119.88013
offset_top = -63.160034
offset_right = 119.11987
offset_bottom = 63.839966
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_dq6vp")
texture_pressed = ExtResource("7_dq6vp")
texture_hover = ExtResource("5_wntf2")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_3021e")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="btnCredits"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50415903
anchor_top = 0.622252
anchor_right = 0.50415903
anchor_bottom = 0.622252
offset_left = -62.494003
offset_top = -22.026001
offset_right = 62.505997
offset_bottom = 21.973999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 25
text = "CRÃ‰DITS"
metadata/_edit_use_anchors_ = true

[node name="MusiqueDeFond" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_3021e")
volume_db = -2.0
autoplay = true
bus = &"Music"

[node name="Panel2" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.0615
anchor_top = 0.9377778
anchor_right = 0.0615
anchor_bottom = 0.9377778
offset_left = -92.08
offset_top = -36.80011
offset_right = 92.92
offset_bottom = 37.19995
theme_override_styles/panel = SubResource("StyleBoxFlat_06t4h")
metadata/_edit_use_anchors_ = true

[node name="version" type="Label" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.574
anchor_right = 0.508
anchor_bottom = 0.574
offset_left = -73.98
offset_top = -33.476036
offset_right = 74.02
offset_bottom = 33.523964
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_jk1qb")
theme_override_font_sizes/font_size = 38
text = "v 1.0.0"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/btnJouer" to="." method="_on_btn_jouer_pressed"]
[connection signal="pressed" from="Panel/btnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="Panel/btnTuto" to="." method="_on_btn_tuto_pressed"]
[connection signal="pressed" from="Panel/btnQuitter" to="." method="_on_btn_quitter_pressed"]
[connection signal="pressed" from="btnCredits" to="." method="_on_btn_credits_pressed"]
